--- a/block.html
+++ b/block.html
@@ -8,23 +8,39 @@
     <style>
         h1{
             background-color: indianred;
-            display: inline;
+            border:35px solid rebeccapurple;
+            /* display: inline; */
+            padding: 10px;
         }
         span{
             background-color:lawngreen;
-            /* width:250px; */
+            width:250px;
             height:250px;
-            margin-top: 200px;
-            display: inline-block;
+            /* margin-top: 200px; */
+            /* display: inline-block; */
+            margin-left: 20px;
+            margin-right: 35px;
+            /* padding-left: 30px; */
         }
 
         div{
             background-color:lightcoral;width:300px;
             height:250px;
+            padding-top:35px;
+            margin-top: 50px;
 
         }
+        h2{
+            background-color:mediumpurple;
+            border-radius:5px;
+
+        }
+
+        p{
+            background-color:mediumspringgreen;
+        }
         a{
-            display: block;
+            /* display: block; */
 
 
         }
@@ -36,10 +52,16 @@
     <span>ami</span>
     <span>choto vi</span>
     <span>soto apu</span>
-    <p>this is a para</p>
+    <!-- <p>this is a para</p> -->
     <a href="http://www.google.com">go to google</a>
     <a href="http://www.google.com">go to google</a>
-    <a href="http://www.google.com">go 
+    <a href="http://www.google.com">go </a>
+
+    <ul>
+        <li>item-1</li>
+        <li>item-2</li>
+        <li>item-3</li>
+    </ul>
     <div>
         <h2>Room-1</h2>
         <p>staying some one</p>
