--- a/pseudo.html
+++ b/pseudo.html
@@ -28,6 +28,33 @@
             color:red;
         }
 
+        li{
+            color:chocolate;
+        }
+
+        li:first-child{
+            color:green;
+        }
+        li:last-child{
+            color:cornflowerblue;
+        }
+        li:nth-child(2n){
+            color:red;
+        }
+
+        li:nth-child(2n+1){
+            background-color:blue;
+        }
+
+        h3::before{
+            content: '  hello  ' ;
+        }
+
+        .special::after{
+            content: ' gello' ;
+            background-color:orange;
+            font-size: 45px;
+        }
     </style>
 </head>
 <body>
@@ -38,5 +65,28 @@
    <a href="http://google.com" target="_blank">google a jau</a>
    <a href="https://www.wix.com" target="_blank">wix a ja</a>
    <a href="https://web.programming-hero.com/" target="_blank">Programming hero te jau</a>
+
+   <br>
+   <h3>middle size header-1</h3>
+   <h3 class="special">middle size header-2</h3>
+   <h3>middle size header-3</h3>
+   <h3 class="special">middle size header-4</h3>
+   <h3 class="special">middle size header-5</h3>
+   <h3>middle size header-6</h3>
+   <ul>
+       <li>Alia</li>
+       <li>dalia</li>
+       <li>salia</li>
+       <li>talia</li>
+       <li>valia</li>
+       <li>xalia</li>
+       <li>ralia</li>
+       <li>walia</li>
+       <li>faria</li>
+       <li>jalia</li>
+       <li>yaolij</li>
+       
+
+   </ul>
 </body>
 </html>
